--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -18,4 +18,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run HACS validation
-        uses: hacs/action@22.5.0
+        uses: hacs/action@main
+        with:
+          category: integration
