--- a/custom_components/syslog_receiver/manifest.json
+++ b/custom_components/syslog_receiver/manifest.json
@@ -2,8 +2,9 @@
     "domain": "syslog_receiver",
     "name": "Syslog Receiver",
     "documentation": "https://github.com/zollak/homeassistant-syslog-receiver",
+    "issue_tracker": "https://github.com/zollak/homeassistant-syslog-receiver/issues",
     "dependencies": [],
     "codeowners": ["@zollak"],
-    "version": "1.0.6",
+    "version": "1.0.7",
     "config_flow": true
 }
