--- a/custom_components/syslog_receiver/manifest.json
+++ b/custom_components/syslog_receiver/manifest.json
@@ -6,5 +6,6 @@
     "dependencies": [],
     "codeowners": ["@zollak"],
     "version": "1.0.7",
-    "config_flow": true
+    "config_flow": true,
+    "iot_class": "local_push"
 }
