--- a/custom_components/syslog_receiver/manifest.json
+++ b/custom_components/syslog_receiver/manifest.json
@@ -7,5 +7,5 @@
     "documentation": "https://github.com/zollak/homeassistant-syslog-receiver",
     "iot_class": "local_push",
     "issue_tracker": "https://github.com/zollak/homeassistant-syslog-receiver/issues",
-    "version": "1.1.0-beta6"
+    "version": "1.1.0"
   }
